--- a/html/details5.html
+++ b/html/details5.html
@@ -9,15 +9,15 @@
     <body> 
         <div class="header"> 
             <div class="logo">
-				<a href="index1.html">THANH NIÊN</a> 
+				<a href="index.html">THANH NIÊN</a> 
             </div> 
             <p>DIỄN ĐÀN CỦA HỘI LIÊN HIỆP THANH NIÊN VIỆT NAM</p> 
         </div> 
         <div class="topnav"> 
-            <a href="index1.html">THỜI SỰ</a> 
-            <a href="index2.html">KINH TẾ</a> 
-            <a href="index3.html">THỂ THAO</a> 
-            <a href="index4.html">DU LỊCH</a> 
+            <a href="index.html">THỜI SỰ</a> 
+            <a href="trang2.html">KINH TẾ</a> 
+            <a href="trang3.html">THỂ THAO</a> 
+            <a href="trang4.html">DU LỊCH</a> 
             <a href="dangky.html" onclick style="float: right">Đăng nhập / Đăng ký</a>  
         </div> 
         <div class="row"> 
